tests/snapshots/formats__gbs__song.gbs.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ song.gbs — GBS, 2 songs — fillyfoal – Song  [0x0+0x80]
  ▾ Header  [0x0+0x70]
      Magic: "GBS"  [0x0+0x3]
      Version: 1  [0x3+0x1]
      Songs: 2  [0x4+0x1]
      First song: 1  [0x5+0x1]
      Load address: 0x400  [0x6+0x2]
      Init address: 0x400  [0x8+0x2]
      Play address: 0x403  [0xa+0x2]
      Stack pointer: 0xfffe  [0xc+0x2]
      Timer modulo: 0  [0xe+0x1]
      Timer control: 0x0  [0xf+0x1]
      Title: "Song"  [0x10+0x20]
      Author: "fillyfoal"  [0x30+0x20]
      Copyright: "2026"  [0x50+0x20]
    Program data  [0x70+0x10]
