tests/snapshots/formats__gbs__test.gbs.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ test.gbs — "Fillyfoal Tunes" by Fillyfoal, 2 songs  [0x0+0xb0]
    Magic: "GBS"  [0x0+0x3]
    Version: 1  [0x3+0x1]
    Number of songs: 2  [0x4+0x1]
    First song: 1  [0x5+0x1]
    Load address: 0x400  [0x6+0x2]
    Init address: 0x400  [0x8+0x2]
    Play address: 0x403  [0xa+0x2]
    Stack pointer: 0xfffe  [0xc+0x2]
    Timer modulo: 0x0  [0xe+0x1]
    Timer control: 0x0  [0xf+0x1]
    Title: "Fillyfoal Tunes"  [0x10+0x20]
    Author: "Fillyfoal"  [0x30+0x20]
    Copyright: "2026"  [0x50+0x20]
    Code  [0x70+0x40]
